<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_top" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorPrimary"
        android:textSize="79sp"
        android:typeface="monospace"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        style="@android:style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="502dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="136dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/help"
                    android:layout_width="0dp"
                    android:layout_height="79dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="0dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/help"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/advice_1"
                    android:layout_width="0dp"
                    android:layout_height="79dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="0dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/advice_1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/help" />

                <Button
                    android:id="@+id/breathe"
                    android:layout_width="0dp"
                    android:layout_height="79dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/breathe"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/advice_1" />

                <Button
                    android:id="@+id/meditate"
                    android:layout_width="0dp"
                    android:layout_height="79dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/meditate"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/breathe" />

                <Button
                    android:id="@+id/journal"
                    android:layout_width="0dp"
                    android:layout_height="79dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/journal"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meditate" />

                <Button
                    android:id="@+id/listen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/listen"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/journal" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>